2006-10-03  Andy Wingo  <wingo@pobox.com>

	* configure.ac: Comment out the bit about multiple versions of
	gstreamer.

2006-09-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to trunk

=== release 0.3.1 ===

2006-09-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* NEWS:
	* RELEASE:
	* configure.ac:
	* flumotion.doap:
	* flumotion.spec.in:
	  releasing 0.3.1, "La Merce"

2006-09-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	  catch errors on remote component calls, and display a reasonable
	  Warning message for them so we know what to fix.
	* flumotion/common/errors.py:
	  document the expected arguments for RemoteMethodError,	
	  taking the method name as the first argument
	* flumotion/wizard/step.py:
	  follow this change through
	* flumotion/component/feedcomponent.py:
	  document remote_effect
	* flumotion/manager/admin.py:
	  use the more useful log.getExceptionMessage
	* flumotion/manager/base.py:
	  check for the difference between AttributeError and NoSuchMethod
	  if we can
	* po/POTFILES.in:
	  add flumotion/admin/admin.py for translation
	  (port from 0.2 patch)

2006-09-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/worker.py:
	  unravel defgen so we can actually see where problems are
	  pass through a RemoteRunError, it's already wrapped

2006-09-27  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/common/medium.py:
	Refactor runBundledFunction to not be a defer generator.
	Essential for debugging issues.
	* flumotion/wizard/steps.py:
	Refactor runChecks to not be a defer generator.
	Essential for debugging issues.
	* flumotion/worker/checks/check.py:
	Fix log line to actually send the log category.

2006-09-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/config.py:
	  use list length 0 as False to check multiple and required
